Bug 159699 - Crash when removing device notifier plasmoid
Summary: Crash when removing device notifier plasmoid
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-22 17:06 UTC by Oliver Putz
Modified: 2008-03-23 20:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The promised screenshot of the ill-rendered device notifier plasmoid (917.09 KB, image/png)
2008-03-23 04:56 UTC, Oliver Putz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Putz 2008-03-22 17:06:54 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.1.2 20070214 
OS:                Linux

Steps to reproduce:

1) Add New Device Notifier widget to plasma desktop (not that it is rendered incorrectly (see attached screenshot)
2) Right click on widget to remove it from desktop
3) See plasma (kdebase r786287) crash with the following backtrace:

Application: Plasma Workspace (plasma), signal SIGSEGV
Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread 0xb6060af0 (LWP 5704)]
[New Thread 0xb4a00b90 (LWP 5705)]
[KCrash handler]
#6  0x00000000 in ?? ()
#7  0xb4135bbe in ~DeviceNotifier (this=0x83768b0)
    at /var/tmp/portage/kde-base/kdebase-9999.4/work/kdebase-9999.4/workspace/plasma/applets/devicenotifier/devicenotifier.cpp:176
#8  0xb70d1c1c in qDeleteInEventHandler (o=0x8586b00)
    at kernel/qobject.cpp:3580
#9  0xb70d3ea0 in QObject::event (this=0x83768b0, e=0x8550d80)
    at kernel/qobject.cpp:1115
#10 0xb668371f in QApplicationPrivate::notify_helper (this=0x8074f38, 
    receiver=0x83768b0, e=0x8550d80) at kernel/qapplication.cpp:3735
#11 0xb66852fa in QApplication::notify (this=0x8073c58, receiver=0x83768b0, 
    e=0x8550d80) at kernel/qapplication.cpp:3329
#12 0xb77051c3 in KApplication::notify (this=0x8073c58, receiver=0x83768b0, 
    event=0x8550d80)
    at /var/tmp/portage/kde-base/kdelibs-9999.4/work/kdelibs-9999.4/kdeui/kernel/kapplication.cpp:311
#13 0xb70c1cf7 in QCoreApplication::notifyInternal (this=0x8073c58, 
    receiver=0x83768b0, event=0x8550d80) at kernel/qcoreapplication.cpp:586
#14 0xb70c3059 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, 
    event_type=0, data=0x804cb68)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#15 0xb70c33bd in QCoreApplication::sendPostedEvents (receiver=0x0, 
    event_type=0) at kernel/qcoreapplication.cpp:1084
#16 0xb671bb1e in QEventDispatcherX11::processEvents (this=0x806fc90, 
    flags=@0xbf8a2fb4)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#17 0xb70c0e61 in QEventLoop::processEvents (this=0xbf8a3020, 
    flags=@0xbf8a2fe8) at kernel/qeventloop.cpp:146
#18 0xb70c0f8f in QEventLoop::exec (this=0xbf8a3020, flags=@0xbf8a3028)
    at kernel/qeventloop.cpp:197
#19 0xb70c3476 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:838
#20 0xb6682e37 in QApplication::exec () at kernel/qapplication.cpp:3267
#21 0xb7f87284 in kdemain (argc=1, argv=0xbf8a3224)
    at /var/tmp/portage/kde-base/kdebase-9999.4/work/kdebase-9999.4/workspace/plasma/plasma/main.cpp:54
#22 0x080487e2 in main (argc=139900264, argv=0x8400e68)
    at /var/tmp/portage/kde-base/kdebase-9999.4/work/kdebase_build/workspace/plasma/plasma/plasma-qgv_dummy.cpp:3
#23 0xb631ffdc in __libc_start_main (main=0x80487c0 <main>, argc=1, 
    ubp_av=0xbf8a3224, init=0x8048810 <__libc_csu_init>, 
    fini=0x8048800 <__libc_csu_fini>, rtld_fini=0xb7fa3100 <_dl_fini>, 
    stack_end=0xbf8a321c) at libc-start.c:229
#24 0x08048731 in _start ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 FiNeX 2008-03-23 01:06:55 UTC
Crash confirmed on revision 788178.
Comment 2 Oliver Putz 2008-03-23 04:56:38 UTC
Created attachment 24007 [details]
The promised screenshot of the ill-rendered device notifier plasmoid
Comment 3 FiNeX 2008-03-23 12:47:35 UTC
I confirm even that the device notifier is not rendered correctly.
Comment 4 Christopher Blauvelt 2008-03-23 20:11:45 UTC
SVN commit 789258 by cblauvelt:

Fixes a crash when removing the applet from the desktop.

BUG: 159699


 M  +13 -4     devicenotifier.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=789258