Fixes a crash when removing the applet from the desktop.

BUG: 159699

svn path=/trunk/KDE/kdebase/workspace/; revision=789258